sample-projects/kubernetes-webhook/kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhooks
---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespace.webhook.example.com
webhooks:
  - name: namespace.webhook.create.com
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVERENDQXZTZ0F3SUJBZ0lVZHRGMXVtNmZnSitlYUtYeisyejkxeUhMQVJnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2RqRUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEZqQVVCZ05WQkFjTQpEVk5oYmlCR2NtRnVZMmx6WTI4eEVqQVFCZ05WQkFvTUNVMTVRMjl0Y0dGdWVURVRNQkVHQTFVRUN3d0tUWGxFCmFYWnBjMmx2YmpFUk1BOEdBMVVFQXd3SVRYbFNiMjkwUTBFd0hoY05NalF3T1RBeU1UVXpPVE16V2hjTk1qVXcKT1RBeU1UVXpPVE16V2pDQmt6RUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeApGakFVQmdOVkJB [...]
      service:
        name: validating-webhooks
        namespace: webhooks
        path: /webhook
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["namespaces"]
    admissionReviewVersions: ["v1"]
    failurePolicy: Ignore
    sideEffects: None
  - name: namespace.webhook.delete.com
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVERENDQXZTZ0F3SUJBZ0lVZHRGMXVtNmZnSitlYUtYeisyejkxeUhMQVJnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2RqRUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEZqQVVCZ05WQkFjTQpEVk5oYmlCR2NtRnVZMmx6WTI4eEVqQVFCZ05WQkFvTUNVMTVRMjl0Y0dGdWVURVRNQkVHQTFVRUN3d0tUWGxFCmFYWnBjMmx2YmpFUk1BOEdBMVVFQXd3SVRYbFNiMjkwUTBFd0hoY05NalF3T1RBeU1UVXpPVE16V2hjTk1qVXcKT1RBeU1UVXpPVE16V2pDQmt6RUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeApGakFVQmdOVkJB [...]
      service:
        name: validating-webhooks
        namespace: webhooks
        path: /delete
        port: 443
    rules:
      - operations: ["DELETE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["namespaces"]
    admissionReviewVersions: ["v1"]
    failurePolicy: Ignore
    sideEffects: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validating-webhooks
  namespace: webhooks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validating-webhooks
  template:
    metadata:
      labels:
        app: validating-webhooks
    spec:
      serviceAccountName: webhook-sa
      containers:
      - name: mutating-webhook
        image: namespace_update:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: webhook-certs
          mountPath: /usr/local/share/ca-certificates/
          readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: tls-secret

---

apiVersion: v1
kind: Service
metadata:
  name: validating-webhooks
  namespace: webhooks
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 5000
  selector:
    app: validating-webhooks
